# SVF-1

./: CMakeLists.txt  build.sh
.github/workflows/: github-action.yml  pkg_publish.yml
include/MemoryModel/: SymbolTableInfo.h
include/SVF-FE/: BasicTypes.h  SymbolTableBuilder.h
include/Util/: SVFModule.h
lib/MemoryModel/: SymbolTableInfo.cpp
lib/SVF-FE/: SymbolTableBuilder.cpp
svf/: CMakeLists.txt
svf-llvm/: CMakeLists.txt
svf-llvm/lib/: SVFIRBuilder.cpp
svf-llvm/tools/AE/: CMakeLists.txt
svf-llvm/tools/CFL/: CMakeLists.txt
svf-llvm/tools/DDA/: CMakeLists.txt
svf-llvm/tools/Example/: CMakeLists.txt
svf-llvm/tools/LLVM2SVF/: CMakeLists.txt
svf-llvm/tools/MTA/: CMakeLists.txt
svf-llvm/tools/SABER/: CMakeLists.txt
svf-llvm/tools/WPA/: CMakeLists.txt  wpa.cpp
svf/include/Graphs/: BasicBlockG.h  CallGraph.h  ICFG.h  ICFGEdge.h  ICFGNode.h
svf/include/SVFIR/: GraphDBClient.h  SVFIR.h  SVFModule.h  SVFStatements.h
svf/include/SVFIR/GraphDB/: CallGraphSchema.json
svf/include/Util/: SVFUtil.h
svf/lib/Graphs/: BasicBlockG.cpp  CallGraph.cpp  ICFG.cpp
svf/lib/Graphs/DBSchema/: CallGraphEdgeSchema.json  CallGraphNodeSchema.json  ICFGEdgeSchema.json  ICFGNodeSchema.json  ICFGSchema.json
svf/lib/SVFIR/: GraphDBClient.cpp  SVFIR.cpp  SVFModule.cpp  SVFStatements.cpp  SVFType.cpp
